# hw4

./: Makefile  README.md  data.txt  pyproject.toml
demo/: viz.ipynb
src/: a1.h  a2.c  a3.c  a4.c  a5.yaml
tests/: test_a1.c  test_a2.c  test_a3.c  test_a4.py  test_a5.py
