[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phys305-hw4"
version = "0.1.0"
description = "n-body simulation using leapfrog integration"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pytest",
    "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]